--- a/index.html
+++ b/index.html
@@ -2,8 +2,33 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <link href="./output.css" rel="stylesheet" />
+    <meta
+      name="description"
+      content="Welcome to Kaltus Collection, your one-stop shop for high-quality abayas and jalabiyas. Explore our wide range of designs and find the perfect attire for any occasion."
+    />
+    <meta
+      name="keywords"
+      content="abaya, jalabiya, clothing, fashion, Islamic clothing, modest fashion, Kaltus Collection"
+    />
+    <!-- <link
+      href="https://fonts.googleapis.com/css2?family=Headland+One&family=Inknut+Antiqua:wght@300;400;500;600;700;800;900&family=Inter:wght@100..900&family=Kaisei+Tokumin&display=swap"
+      rel="stylesheet"
+    /> -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+      integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/IMAGES/logo/footerLogo.png"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kaltus Collectibles</title>
   </head>
