--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
       rel="stylesheet"
       href="https://site-assets.fontawesome.com/releases/v6.6.0/css/all.css"
     />
-    <!-- <link
+    <link
       href="https://fonts.googleapis.com/css2?family=Headland+One&family=Inknut+Antiqua:wght@300;400;500;600;700;800;900&family=Inter:wght@100..900&family=Kaisei+Tokumin&display=swap"
       rel="stylesheet"
-    /> -->
+    />
 
     <link
       rel="icon"
